2008-02-27  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sound-juicer.h:
	* src/sj-play.c:
	Add a PAUSED track state (#518760, thanks Brian Geppert)

2008-02-27  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sound-juicer.h:
	Don't create custom stock items when we can use the system ones.

2008-02-26  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't use custom icons for the playing/ripping status icons, but
	the g-i-t stock icons (#404546, Michael Monreal).
	
	* data/sj-play.png:
	* data/sj-record.png:
	* data/Makefile.am:
	Remove.

2008-02-26  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.92.

2008-02-26  Ross Burton  <ross@burtonini.com>

	* src/bacon-volume.c:
	Remove deprecated calls (#518753, thanks Michael Terry).

2008-02-25  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	When setting the base path, if it is unset default to the XDG
	music directory, and only emit change signals if the path has
	actually changed (#471971, thanks Matthew Martin).

2008-02-21  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When editing the album artist, if there is a sortable artist name
	set then unset it (#397416).

2008-02-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix a memory leak.

2008-02-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.91.

2008-02-14  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	Check for nautilus_burn_drive_can_eject.

	* src/sj-main.c:
	Use nautilus_burn_drive_can_eject to enable/disable the Eject button.

	Thanks Dave Meikle (#430787).

2008-02-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	When extracting write to a temporary file and rename it when
	finished, so that cancelling when overwriting doesn't remove the
	previously ripped track (#172543, thanks Matthew Martin).

2008-02-09  Claude Paroz  <claude@2xlibre.net>

	* src/sj-about.c: (on_about_activate): Updated FSF address.
