@@ -1,3 +1,8 @@
+2008-02-29  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-genres.c:
+	Translate the genres (#519150, thanks Brian Geppert).
+
 2008-02-27  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
